// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label renders with all props 1`] = `
.emotion-0 {
  font-size: 14px;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 400;
  line-height: 1.4;
  color: rgba(60,60,60,0.9);
  opacity: 0.4;
}

<label
  className="emotion-0"
>
  I am a label
</label>
`;

exports[`Label renders without props 1`] = `
.emotion-0 {
  font-size: 14px;
  font-family: ArtifaktElement,sans-serif;
  font-weight: 400;
  line-height: 1.4;
  color: rgba(60,60,60,0.9);
  opacity: 1.0;
}

<label
  className="emotion-0"
/>
`;
